--- a/index.html
+++ b/index.html
@@ -5,35 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+   
 </head>
 <body>
-    <div class="container-fluid bg-dark" data-bs-theme="dark">
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="assets/img/logo_olivo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    El olivo
-                  </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link"  href="#">Inicio</a>
-                  <a class="nav-link active"
-                  aria-current="page" href="#">Calendario</a>
-                  <a class="nav-link" href="#">Mapa</a>
-                  <a class="nav-link" aria-disabled="true">Blog</a>
-                </div>
-              </div>
-            </div>
-          </nav>
     </header>
     <main>
-        <h1 class="display-1 text-light text-center" data-bs-theme="dark">Calendario</h1>
-        <p class="text-light text-center">Convocatorias, concursos, eventos,...</p>
+        <h1>calendario</h1>
+        <p>Convocatorias, concursos, eventos,...</p>
     <div class="container">
         <div class="parent">
             <div class="div1 box">
@@ -154,6 +133,5 @@
     </div>
 </main>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
