--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <header>
     </header>
     <main>
-        <h1>calendario</h1>
-        <p>Convocatorias, concursos, eventos,...</p>
+        <div class="header">
+            <h1>calendario</h1>
+            <p>Convocatorias, concursos, eventos,...</p>
+        </div>
     <div class="container">
         <div class="parent">
             <div class="div1 box">
@@ -132,6 +134,5 @@
         </div>
     </div>
 </main>
-</div>
 </body>
 </html>
