--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 <body>
     <header>
+        <nav>
+            <a href="#" class="brand">
+                <img src="assets/img/logo_olivo.svg" alt="logo" width="24px">
+                <p>el_olivo</p>
+            </a>
+            <ul>
+                <li><a href="#">inicio</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#" class="active">calendario</a></li>
+                <li><a href="#">mapa</a></li>
+                <li><a href="#" class="log-in">Log in</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="header">
-            <h1>calendario</h1>
+            <h1 class="title-font">calendario</h1>
             <p>Convocatorias, concursos, eventos,...</p>
         </div>
     <div class="container">
