--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
    
 </head>
@@ -147,5 +148,33 @@
         </div>
     </div>
 </main>
+<footer>
+    <div class="logo">
+        <img src="assets/img/logo_olivo.svg" alt="logo" width="26px">
+        <h4>el_olivo</h4>
+    </div>
+    <div class="redes">
+        <a href="https://facebook.com" target="_blank" class="text-white fs-4">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" class="text-white fs-4">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank" class="text-white fs-4">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://youtube.com" target="_blank" class="text-white fs-4">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://github.com" target="_blank" class="text-white fs-4">
+            <i class="fab fa-github"></i>
+          </a>
+    </div>
+    <form action="">
+        <input type="email" class="email-input" placeholder="ejemplo@email.com">
+        <input type="button" value="suscribirse" class="suscribe-button">
+    </form>
+    </div>
+</footer>
 </body>
 </html>
