create index page

--- a/index.html
+++ b/index.html
@@ -8,173 +8,107 @@
     <link rel="stylesheet" href="css/style.css">
    
 </head>
-<body>
+<body class="index-body">
     <header>
+        <div class="video-intro">
+            <video src="assets/img/SNOOZE QUEST.mp4" width=100% autoplay muted></video>
+            <p>Artist: Vewn</p>
+        </div>
         <nav>
-            <a href="#" class="brand">
+            <a href="index.html" class="brand">
                 <img src="assets/img/logo_olivo.svg" alt="logo" width="24px">
                 <p>el_olivo</p>
             </a>
             <ul>
-                <li><a href="#">inicio</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#" class="active">calendario</a></li>
-                <li><a href="#">mapa</a></li>
-                <li><a href="#" class="log-in">Log in</a></li>
+                <li><a href="index.html" class="active">inicio</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="calendario.html" >calendario</a></li>
+                <li><a href="mapa.html">mapa</a></li>
+                <li><a href="cuenta.html" class="log-in">Log in</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="header">
-            <h1 class="title-font">calendario</h1>
-            <p>Convocatorias, concursos, eventos,...</p>
-        </div>
-    <div class="container">
-        <div class="parent">
-            <div class="div1 box">
-                <h3><span>1</span> MAR</h3>
-                <div class="event">
-                    Ejemplo de algo
+        <article class="intro-article">
+            <div class="intro-article-image">
+                <img src="" alt="">
+            </div>
+            <div class="intro-article-text">
+                <h1 class="title-font">el_olivo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mus, habitasse cursus aptent rhoncus sociis class semper maecenas, pulvinar primis morbi tristique habitant velit porta. Malesuada dictumst habitasse tempus sagittis eget iaculis suspendisse metus vulputate ut integer, consequat facilisis pellentesque neque molestie fermentum tincidunt lobortis elementum sed, ultricies pharetra rutrum ligula luctus rhoncus tempor vel aliquam a.</p>
+                <div class="call-to-action">
+                    <a href="#" class="button">Explorar el mapa</a>
+                    <a href="#" class="button">Explorar el blog</a>
                 </div>
-            </div>
-            <div class="div2 box">
-                <h3><span>2</span> MIE</h3>
-            </div>
-            <div class="div3 box">
-                <h3><span>3</span> JUE</h3>
-            </div>
-            <div class="div4 box">
-                <h3><span>4</span> VIE</h3>
-            </div>
-            <div class="div5 box">
-                <h3><span>5</span> SAB</h3>
-            </div>
-            <div class="div6 box">
-                <h3><span>6</span> DOM</h3>
-            </div>
-            
         </div>
-        <div class="parent">
-            <div class="div7 box">
-                <h3><span>7</span> LUN</h3>
+        </article>
+        <article class="intro-article">
+            <div class="intro-article-image">
+                <img src="" alt="">
             </div>
-            <div class="div8 box">
-                <h3><span>8</span> MAR</h3>
-            </div>
-            <div class="div9 box">
-                <h3><span>9</span> MIE</h3>
-            </div>
-            <div class="div10 box">
-                <h3><span>10</span> JUE</h3>
-            </div>
-            <div class="div11 box">
-                <h3><span>11</span> VIE</h3>
-            </div>
-            <div class="div12 box">
-                <h3><span>12</span> SAB</h3>
-                <div class="event">
-                    Ejemplo de algo
+            <div class="intro-article-text">
+                <h1 class="title-font">el_olivo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mus, habitasse cursus aptent rhoncus sociis class semper maecenas, pulvinar primis morbi tristique habitant velit porta. Malesuada dictumst habitasse tempus sagittis eget iaculis suspendisse metus vulputate ut integer, consequat facilisis pellentesque neque molestie fermentum tincidunt lobortis elementum sed, ultricies pharetra rutrum ligula luctus rhoncus tempor vel aliquam a.</p>
+                <div class="call-to-action">
+                    <a href="#" class="button">Explorar el mapa</a>
+                    <a href="#" class="button">Explorar el blog</a>
                 </div>
-            </div>
-            <div class="div13 box">
-                <h3><span>13</span> DOM</h3>
-            </div>
         </div>
-
-        <div class="parent">
-            <div class="div14 box">
-                <h3><span>14</span> LUN</h3>
+        </article>
+        <article class="intro-article">
+            <div class="intro-article-image">
+                <img src="" alt="">
             </div>
-            <div class="div15 box">
-                <h3><span>15</span> MAR</h3>
-            </div>
-            <div class="div16 box">
-                <h3><span>16</span> MIE</h3>
-            </div>
-            <div class="div17 box">
-                <h3><span>17</span> JUE</h3>
-            </div>
-            <div class="div18 box">
-                <h3><span>18</span> VIE</h3>
-            </div>
-            <div class="div19 box">
-                <h3><span>19</span> SAB</h3>
-                <div class="event">
-                    Ejemplo de algo
+            <div class="intro-article-text">
+                <h1 class="title-font">el_olivo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mus, habitasse cursus aptent rhoncus sociis class semper maecenas, pulvinar primis morbi tristique habitant velit porta. Malesuada dictumst habitasse tempus sagittis eget iaculis suspendisse metus vulputate ut integer, consequat facilisis pellentesque neque molestie fermentum tincidunt lobortis elementum sed, ultricies pharetra rutrum ligula luctus rhoncus tempor vel aliquam a.</p>
+                <div class="call-to-action">
+                    <a href="#" class="button">Explorar el mapa</a>
+                    <a href="#" class="button">Explorar el blog</a>
                 </div>
-            </div>
-            <div class="div20 box">
-                <h3><span>20</span> DOM</h3>
-            </div>
         </div>
-
-        <div class="parent">
-            <div class="div21 box">
-                <h3><span>21</span> LUN</h3>
+        </article>
+        <article class="intro-article">
+            <div class="intro-article-image">
+                <img src="" alt="">
             </div>
-            <div class="div22 box">
-                <h3><span>22</span> MAR</h3>
-            </div>
-            <div class="div23 box">
-                <h3><span>23</span> MIE</h3>
-            </div>
-            <div class="div24 box">
-                <h3><span>24</span> JUE</h3>
-                <div class="event">
-                    Ejemplo de algo
+            <div class="intro-article-text">
+                <h1 class="title-font">el_olivo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mus, habitasse cursus aptent rhoncus sociis class semper maecenas, pulvinar primis morbi tristique habitant velit porta. Malesuada dictumst habitasse tempus sagittis eget iaculis suspendisse metus vulputate ut integer, consequat facilisis pellentesque neque molestie fermentum tincidunt lobortis elementum sed, ultricies pharetra rutrum ligula luctus rhoncus tempor vel aliquam a.</p>
+                <div class="call-to-action">
+                    <a href="#" class="button">Explorar el mapa</a>
+                    <a href="#" class="button">Explorar el blog</a>
                 </div>
-            </div>
-            <div class="div25 box">
-                <h3><span>25</span> VIE</h3>
-            </div>
-            <div class="div26 box">
-                <h3><span>26</span> SAB</h3>
-            </div>
-            <div class="div27 box">
-                <h3><span>27</span> DOM</h3>
-            </div>
         </div>
-
-        <div class="parent">
-            <div class="div28 box">
-                <h3><span>28</span> LUN</h3>
-            </div>
-            <div class="div29 box">
-                <h3><span>29</span> MAR</h3>
-            </div>
-            <div class="div30 box">
-                <h3><span>30</span> MIE</h3>
-            </div>
+        </article>
+    </main>
+    <footer>
+        <div class="logo light">
+            <img src="assets/img/logo_olivo_dark.svg" alt="logo" width="26px">
+            <h4>el_olivo</h4>
         </div>
-    </div>
-</main>
-<footer>
-    <div class="logo">
-        <img src="assets/img/logo_olivo.svg" alt="logo" width="26px">
-        <h4>el_olivo</h4>
-    </div>
-    <div class="redes">
-        <a href="https://facebook.com" target="_blank" class="text-white fs-4">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://twitter.com" target="_blank" class="text-white fs-4">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://instagram.com" target="_blank" class="text-white fs-4">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://youtube.com" target="_blank" class="text-white fs-4">
-            <i class="fab fa-youtube"></i>
-          </a>
-          <a href="https://github.com" target="_blank" class="text-white fs-4">
-            <i class="fab fa-github"></i>
-          </a>
-    </div>
-    <form action="">
-        <input type="email" class="email-input" placeholder="ejemplo@email.com">
-        <input type="button" value="suscribirse" class="suscribe-button">
-    </form>
-    </div>
-</footer>
+        <div class="redes-light">
+            <a href="https://facebook.com" target="_blank" class="text-white fs-4">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="https://twitter.com" target="_blank" class="text-white fs-4">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://instagram.com" target="_blank" class="text-white fs-4">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://youtube.com" target="_blank" class="text-white fs-4">
+                <i class="fab fa-youtube"></i>
+              </a>
+              <a href="https://github.com" target="_blank" class="text-white fs-4">
+                <i class="fab fa-github"></i>
+              </a>
+        </div>
+        <form action="">
+            <input type="email" class="email-input" placeholder="ejemplo@email.com">
+            <input type="button" value="suscribirse" class="suscribe-button">
+        </form>
+        </div>
+    </footer>
 </body>
 </html>
