--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             <video src="assets/img/SNOOZE QUEST.mp4" width=100% autoplay muted></video>
             <p>Artist: Vewn</p>
         </div>
-        <nav>
-            <a href="index.html" class="brand">
-                <img src="assets/img/logo_olivo.svg" alt="logo" width="24px">
-                <p>el_olivo</p>
-            </a>
-            <ul>
-                <li><a href="index.html" class="active">inicio</a></li>
-                <li><a href="blog.html">blog</a></li>
-                <li><a href="calendario.html" >calendario</a></li>
-                <li><a href="mapa.html">mapa</a></li>
-                <li><a href="cuenta.html" class="log-in">Log in</a></li>
-            </ul>
-        </nav>
     </header>
-    <main>
+    <nav>
+        <a href="index.html" class="brand">
+            <img src="assets/img/logo_olivo.svg" alt="logo" width="24px">
+            <p>el_olivo</p>
+        </a>
+        <ul>
+            <li><a href="index.html" class="active">inicio</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <li><a href="calendario.html" >calendario</a></li>
+            <li><a href="mapa.html">mapa</a></li>
+            <li><a href="cuenta.html" class="log-in">Log in</a></li>
+        </ul>
+    </nav>
+    <main class="container">
         <article class="intro-article">
             <div class="intro-article-image">
                 <img src="" alt="">
